[tool.poetry]
name = "cloudbuild-dagster-sample"
version = "0.1.0"
description = "Sample project using Cloud Build to continously deploy Dagster to GCP"
authors = []

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
dagster = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
